--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
