--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,16 @@ version: "3.9"
 services:
   db:
     image: postgres
+    restart: always
+    user: postgres
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+    expose:
+        - "5432"
   web:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
@@ -11,6 +19,5 @@ services:
       - .:/myapp
     ports:
       - "3000:3000"
-      - "22:22"
     depends_on:
       - db
